<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".txt">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/txt1"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/enctxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enctxt"
        android:layout_width="405dp"
        android:layout_height="55dp"
        android:background="@color/black"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_the_text"
        android:inputType="textPersonName"
        android:textColor="#F4EBEB"
        android:textColorHint="#F6F2F2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="410dp"
        android:layout_height="61dp"
        android:background="#000000"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_the_password"
        android:inputType="textPersonName"
        android:textColor="#FDFBFB"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enctxt"
        app:layout_constraintVertical_bias="0.041"
        android:autofillHints="" />

    <Button
        android:id="@+id/decbtn"
        android:layout_width="166dp"
        android:layout_height="53dp"
        android:background="@drawable/custom_btn"
        android:text="@string/decrypt"
        app:backgroundTint="#B0011503"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401" />

    <Button
        android:id="@+id/encbtn"
        android:layout_width="148dp"
        android:layout_height="55dp"
        android:background="@drawable/custom_btn"
        android:text="@string/encrypt"
        app:backgroundTint="#A3000C01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402" />

    <Button
        android:id="@+id/clrbtn"
        android:layout_width="216dp"
        android:layout_height="56dp"
        android:layout_margin="20dp"
        android:background="@drawable/custom_btn"
        android:text="@string/copy"
        app:backgroundTint="#A3000C01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.477" />

    <TextView
        android:id="@+id/txtans"
        android:layout_width="400dp"
        android:layout_height="75dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/decrypter"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FAF7F7"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535" />

</androidx.constraintlayout.widget.ConstraintLayout>