<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".img">


    <TextView
        android:id="@+id/ans2"
        android:layout_width="407dp"
        android:layout_height="90dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/text1"
        android:textColor="#FFFDFD"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="326dp"
        android:layout_height="333dp"

        android:adjustViewBounds="true"
        android:contentDescription="@string/image12"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.801">


        <Button
            android:id="@+id/enbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_btn"
            android:text="@string/encode"
            app:backgroundTint="#B0011503" />

        <Button
            android:id="@+id/debtn"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/custom_btn"
            android:text="@string/decode"
            app:backgroundTint="#B0011503" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="387dp"
        android:layout_height="54dp"
        android:text="@string/anstxt2"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image2"
        app:layout_constraintVertical_bias="0.56" />


</androidx.constraintlayout.widget.ConstraintLayout>